--- a/demo/demo1_min.html
+++ b/demo/demo1_min.html
@@ -5,12 +5,10 @@
 
 		<title>JexGrid example 4: Model</title>
 
-		<link rel="stylesheet" href="../css/jgrid.css" type="text/css" media="screen" />
+		<script language="JavaScript" src="../lib/js/jquery-1.5.1.min.js"></script>
+		<script language="JavaScript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
 
-		<script language="JavaScript" src="../lib/jquery-1.4.4.min.js"></script>
-		<script language="JavaScript" src="../lib/jquery-ui-1.8.7.custom.min.js"></script>
-
-		<script language="JavaScript" src="../bin/jgrid-1.3.2-min.js"></script>
+		<script language="JavaScript" src="../dist/jgrid-1.3.2-min.js"></script>
 		<script>
 		var grid;
 		var options;
