--- a/demo/demo1_src.html
+++ b/demo/demo1_src.html
@@ -5,22 +5,17 @@
 
 		<title>JexGrid example 4: Model</title>
 
-		<script language="JavaScript" src="../lib/js/jquery-1.5.1.min.js"></script>
-		<script language="JavaScript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
-		<script language="JavaScript" src="../src/goog/base.js"></script>
+		<script type="text/javascript" src="../lib/js/jquery-1.5.1.min.js"></script>
+		<script type="text/javascript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
+		<script type="text/javascript" src="../src/goog/base.js"></script>
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script> 
-		<script language="JavaScript" src="../src/deps.js"></script>		
-		<script language="JavaScript" src="deps.js"></script>		
-		
+		<script type="text/javascript" src="../src/deps.js"></script>		
+		<script type="text/javascript" src="deps.js"></script>		
+		<script>
 			var grid;
 			var data;
 			var options;
 		</script>
-		<style rel="stylesheet" type="text/css">
-		body {
-			margin: 0;
-		}
-		</style>
 	</head>
 	<body>
 		<div id="myGrid"></div>
