--- a/demo/demo-9.html
+++ b/demo/demo-9.html
@@ -4,15 +4,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
 		<title>JexGrid: 트리 모듈 Collapser 사용법</title>
 
-		<link rel="stylesheet" href="demo.css" type="text/css" media="screen"  />
-		<script language="JavaScript" src="demo.js"></script>
-		<script language="JavaScript" src="../lib/jquery-1.4.4.min.js"></script>
-		<script language="JavaScript" src="../lib/jquery-ui-1.8.7.custom.min.js"></script>
-		<script language="JavaScript" src="../lib/douglascrockford-JSON-js-633fe5a/json2.js"></script>
-		<script language="JavaScript" src="../lib/date-ko-KR.js"></script>
-
-		<script language="JavaScript" src="../bin/jgrid-1.3.2-all-beautified.js"></script>
-
+		<script type="text/javascript" src="../lib/js/jquery-1.5.1.min.js"></script>
+		<script type="text/javascript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
+		<script type="text/javascript" src="../dist/jgrid-1.3.2-min.js"></script>
 		<script>
 		var grid;
 		var container;
@@ -20,6 +14,10 @@
 		var options;
 		var data;
 		</script>
+
+		<link rel="stylesheet" href="demo.css" type="text/css" media="screen"  />
+		<script language="JavaScript" src="demo.js"></script>
+
 	</head>
 	<body>
 		<h4>JexGrid Demonstrations - Chapter 9: 트리 모듈 Collapser 사용법</h4>
