--- a/demo/demo1_min.html
+++ b/demo/demo1_min.html
@@ -5,10 +5,9 @@
 
 		<title>JexGrid example 4: Model</title>
 
-		<script language="JavaScript" src="../lib/js/jquery-1.5.1.min.js"></script>
-		<script language="JavaScript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
-
-		<script language="JavaScript" src="../dist/jgrid-1.3.2-min.js"></script>
+		<script type="text/javascript" src="../lib/js/jquery-1.5.1.min.js"></script>
+		<script type="text/javascript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
+		<script type="text/javascript" src="../dist/jgrid-1.3.2-min.js"></script>
 		<script>
 		var grid;
 		var options;
