--- a/demo/demo1_src_colgroup.html
+++ b/demo/demo1_src_colgroup.html
@@ -5,56 +5,17 @@
 
 		<title>JexGrid example 4: Model</title>
 
-		<link rel="stylesheet" href="../css/jgrid.css" type="text/css" media="screen" />
-<!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?3.3.0/build/cssreset/reset-min.css&3.3.0/build/cssfonts/fonts-min.css&3.3.0/build/cssgrids/grids-min.css">
-    <!-- JS -->
-    <script type="text/javascript" src="http://yui.yahooapis.com/combo?3.3.0/build/yui/yui-base-min.js&3.3.0/build/json/json-min.js&3.3.0/build/stylesheet/stylesheet-min.js"></script>
-    
-		<script language="JavaScript" src="../lib/jquery-1.4.4.min.js"></script>
-		<script language="JavaScript" src="../lib/jquery-ui-1.8.7.custom.min.js"></script>
-
-		<!--
-		<script language="JavaScript" src="../bin/jgrid-1.2.2-min.js"></script>
-		-->
-		
-		<script language="JavaScript" src="../src/array_ext_ie.js"></script>
-		<script language="JavaScript" src="../src/engine_ext.js"></script>
-		<script language="JavaScript" src="../src/util.js"></script>
-		<script language="JavaScript" src="../src/util_jquery.js"></script>
-		<script language="JavaScript" src="../src/tracer.js"></script>
-		<script language="JavaScript" src="../src/jgrid_manager.js"></script>
-		<script language="JavaScript" src="../src/goog_base.js"></script>
-		<script language="JavaScript" src="../src/lang_disposable.js"></script>
-		<script language="JavaScript" src="../src/events_eventdispatcher.js"></script>
-		<script language="JavaScript" src="../src/jgrid_column.js"></script>
-		<script language="JavaScript" src="../src/tree.js"></script>
-		<script language="JavaScript" src="../src/jgrid_grid.js"></script>
-		<script language="JavaScript" src="../src/jgrid_cache.js"></script>
-		<script language="JavaScript" src="../src/jgrid_cell.js"></script>
-		<script language="JavaScript" src="../src/jgrid_checkmanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_collapser.js"></script>
-		<script language="JavaScript" src="../src/jgrid_colgroup.js"></script>
-		<script language="JavaScript" src="../src/jgrid_coldefmanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_colheader.js"></script>
-		<script language="JavaScript" src="../src/jgrid_datamanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_footer.js"></script>
-		<script language="JavaScript" src="../src/jgrid_editmanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_eventmanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_selectionmanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_searchmanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_viewportmanager.js"></script>
-		<script language="JavaScript" src="../src/jgrid_tooltipmanager.js"></script>
+		<script type="text/javascript" src="../lib/js/jquery-1.5.1.min.js"></script>
+		<script type="text/javascript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
+		<script type="text/javascript" src="../src/goog/base.js"></script>
+		<script type="text/javascript" src="https://www.google.com/jsapi"></script> 
+		<script type="text/javascript" src="../src/deps.js"></script>		
+		<script type="text/javascript" src="deps.js"></script>		
 		<script>
 			var grid;
 			var data;
 			var options;
 		</script>
-		<style rel="stylesheet" type="text/css">
-		body {
-			margin: 0;
-		}
-		</style>
 	</head>
 	<body>
 		<div id="myGrid"></div>
