--- a/demo/dist_tree_search.html
+++ b/demo/dist_tree_search.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
+		<meta http-equiv="X-UA-Compatible" content="IE=7" >
+		
 		<title>JexGrid: 트리 모듈 Collapser 사용법</title>
 
 		<script type="text/javascript" src="../lib/js/jquery-1.5.1.min.js"></script>
