--- a/demo/dist_tree_search_editor.html
+++ b/demo/dist_tree_search_editor.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
+		<meta http-equiv="X-UA-Compatible" content="IE=7" >
 
 		<title>JexGrid example 4: Model</title>
 
