--- a/demo/src_tree_search.html
+++ b/demo/src_tree_search.html
@@ -11,7 +11,7 @@
 
 		<script type="text/javascript" src="../lib/js/jquery-1.5.1.min.js"></script>
 		<script type="text/javascript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
-		<script type="text/javascript" src="../src/goog/base.js"></script>
+		<script type="text/javascript" src="../src/base.js"></script>
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script> 
 		<script type="text/javascript" src="../src/deps.js"></script>		
 		<script type="text/javascript" src="deps.js"></script>		
