--- a/demo/src_search_many_columns.html
+++ b/demo/src_search_many_columns.html
@@ -112,6 +112,7 @@
 				options: {
 				name:'grid',
 				ViewportManager:{
+				rowsPerPage: 20,
 				autoHeight:false
 				},
 				DataManager:{idColKeys:["id","name"]},
