--- a/demo/src_search_many_columns_no_data.html
+++ b/demo/src_search_many_columns_no_data.html
@@ -6,9 +6,6 @@
 
 		<title>JexGrid example 4: Model</title>
 
-		<link rel="stylesheet" href="demo.css" type="text/css" media="screen"/>
-		<script language="JavaScript" src="demo.js"></script>
-
 		<!-- JS -->
 		<script type="text/javascript" src="../lib/js/jquery-1.5.1.min.js"></script>
 		<script type="text/javascript" src="../lib/js/jquery-ui-1.8.14.custom.min.js"></script>
@@ -16,68 +13,29 @@
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script> 
 		<script type="text/javascript" src="../src/deps.js"></script>		
 		<script type="text/javascript" src="deps.js"></script>		
-
+	</head>
+	<body>
+		<div id="grid"></div>
 		<script>
 			var grid;
 			var container;
 			var colDefs;
 			var options;
 			var data;
-		</script>
-		<style id='style' type="text/css"></style>
-	</head>
-	<body>
-		<h4>JexGrid Demonstrations - Chapter 9: 트리 모듈 Collapser 사용법</h4>
-		<div class="index">
-			<span><< 이전:<a href="demo-8.html">Chapter 8: CheckManager 사용법</a></span>
-			<span>홈:<a href="index.html">JexGrid Demo Home</a></span>
-			<span>다음:<a href="demo-10.html">Chapter 10</a> >></span>
-		</div>
 
-		<div id="grid"></div>
+			data = [];
+			for (var i = 0; i < 200; i++) {
+				data.push({
+					id: -Math.floor(i / 4),
+					name: '' + (-(i % 4)),
+					0: i,
+					1: 1231232132313,
+					2: '-' + i
+				});
+			}
 
-		<script>
-			var autodata = [
-			{id:0, name:'apple'},
-			{id:1, name:'banana'},
-			{id:2, name:'Cat'},
-			{id:3, name:'dog'},
-			{id:4, name:'Elephant'},
-			{id:5, name:undefined},
-			{id:6},
-			{id:7, name:null},
-			{id:8, name:8},
-			{id:9, name:{a:3}}
-			];
-		</script>
-		<div><input type='text' id='auto1' class='autocom'/></div>
-		<div><input type='text' id='auto2' class='autocom'/></div>
-
-		<h5>Source Code - 직접 내용을 변경한 후 실행 버튼을 클릭하여 테스트 할 수 있습니다.</h5>
-		<textarea id="codebox" class="codebox"></textarea>
-		<button type="button" onclick="run()">실행</button>
-		<button type="button" onclick="clearConsole();run('resetcode')">초기화</button>
-		<button type="button" onclick="run('add')">로우 추가</button>
-		<button type="button" onclick="run('uncheck')">2번째 로우 체크 해제</button>
-		<button type="button" onclick="run('toggle')">랜덤 체크 토글</button>
-		<button type="button" onclick="run('getList')">체크된 리스트 가져오기</button>
-		<button type="button" onclick="run('check5')">처음 5개 체크하기</button>
-		<button type="button" onclick="clearConsole();run('radio')">Radio 버튼</button>
-
-		<h5>Console</h5>
-		<textarea id="console" class="codebox" readonly="readonly"></textarea>
-		<button type="button" onclick="clearConsole()">초기화</button>
-		<div id='csstest'>csstest</div>
-
-		<div class="hiddencode">
-
-			<textarea id="resetcode">
-
-				if (grid !== undefined){grid.destroy();grid=undefined;}
-				data = [];
-				for (var i = 0; i < 200; i++)	data.push({id:-Math.floor(i / 4), name:-(i % 4), 0: i, 1: 1231232132313, 2:'-'+i});
-				colDefs = [
-				{
+			colDefs = [
+			{
 				key:"id",
 				name:"아이디",
 				width:100,
@@ -88,8 +46,8 @@
 				sorter:"int",
 				maxlength: 10,
 				resizable:true
-				},
-				{
+			},
+			{
 				key:"name",
 				name:"이름",
 				width:100,
@@ -99,120 +57,59 @@
 				sorter:"int",
 				resizable:true,
 				editor:JGM.create("Editor"),
-				CheckManager:{}
-				},a ];
+				CheckManager:{},
+				type: 'int',
+				parser: true,
+				validator: function(v, d, s, n, e) {
+					return isFinite(v);
+				}
+			}];
 
-				for (var i = 0; i < 20; i++)
-				colDefs.push({key:i, name:"col" + i, resizable:true, editor:JGM.create("Editor"), sumRenderer:true});
+			for (var i = 0; i < 20; i++) {
+				colDefs.push({
+					key: i,
+					name: "col" + i,
+					resizable: true,
+					editor: JGM.create("Editor"),
+					sumRenderer: true
+				});
+			}
 
-				colDefs[3].style = 'text-align:right';
-				colDefs[4].style = 'text-align:right';
-				grid = JGM.grid({ container: document.getElementById("grid"), datalist: null,
+			colDefs[3].style = 'text-align:right';
+			colDefs[4].style = 'text-align:right';
+
+			grid = JGM.grid({
+				container: document.getElementById("grid"),
+				datalist: null,
 				colDefs: colDefs,
 				options: {
-				name:'grid',
-				ViewportManager:{
-				rowsPerPage: 20,
-				autoHeight:false
-				},
-				DataManager:{idColKeys:["id","name"]},
-				ColHeader:{
-				reorderEnabled:true,
-				syncResize:false
-				},
-				SearchManager:{},
-				SelectionManager:{
-				},
-				EditManager:{},
-				MenuBar:{},
-				DataCreator:{},
-				Footer:{},
-				CheckManager:{
-				}	// 체크 매니저를 기본 옵션으로 생성합니다.
-				}});
+					name:'grid',
+					ViewportManager:{
+						rowsPerPage: 20,
+						autoHeight:false
+					},
+					DataManager:{idKey:'0'},
+					ColHeader:{
+						reorderEnabled:true,
+						syncResize:false
+					},
+					SearchManager:{},
+					SelectionManager:{
+					},
+					EditManager:{},
+					MenuBar:{},
+					DataCreator:{},
+					Footer:{},
+					CheckManager:{
+					}	// 체크 매니저를 기본 옵션으로 생성합니다.
+			}});
 
-				grid.event.register({
+			grid.event.register({
 				e: "onAfterCheckChange",	// 한개의 데이터가 체크/체크해제 되었을 경우 발생하는 이벤트 입니다.
 				f: function(datarow, check) {	// 이벤트 핸들러에는 데이터와 체크 여부가 파라미터로 주어집니다.
-				print(JSON.stringify(datarow) + " 가 체크" + (check ? "":"해제") + " 되었습니다.");
+					print(JSON.stringify(datarow) + " 가 체크" + (check ? "":"해제") + " 되었습니다.");
 				}
-				});
-
-			</textarea>
-
-			<textarea id="add">
-				if (grid !== undefined){grid.destroy();grid=undefined;}
-				var data1 = {id:3, pid:0};	// 데이터 3은 데이터 0의 Child 노드로 시작합니다.
-				var data2 = {id:6, pid:3};
-				var data3 = {id:2, pid:2};
-				data = [data2, data3, data1,{id:7,pid:2},{id:8,pid:2},{id:9,pid:7},{id:0, pid:0},{id:1, pid:1},{id:4, pid:0},{id:5, pid:3}];
-
-				grid = JGM.grid({ container: document.getElementById("grid"), datalist: data, colDefs: [ {key:"id",name:"Node ID",width:300}, { key:"pid", name:"Parent ID"} ],
-				options: {
-				ColHeader:{},
-				DataManager:{idKey:"id"},
-				Collapser:{
-				key: "id",	// collapser 토글 아이콘을 표시할 컬럼 키 값을 정합니다.
-				Tree: {
-				nodeKey: "id",	// 트리 구조에 사용될 node key 값
-				parentKey: "pid" // 트리 구조에 사용될 parent key 값
-				}
-				}
-				}});
-
-				grid.dataMgr.updateList([
-				{datarow:data1,change:{pid:2}},
-				{datarow:data2,change:{id:10}},
-				{datarow:data3,change:{pid:0}}
-				]);
-				//grid.dataMgr.update(data1, {pid:1});	// 0 에서 1의 Child 노드로 들어갑니다
-				//grid.dataMgr.update(data1, {id:7}); // id 가 바뀌기 때문에 pid 가 3 인 5 와 6 은 Parent 노드를 잃어버립니다. 그래서 화면에 표시되지 않습니다.
-
-			</textarea>
-
-			<textarea id="uncheck">
-				grid.checkMgr.uncheck(grid.dataMgr.datalist[1]);
-			</textarea>
-
-			<textarea id="toggle">
-				grid.checkMgr.toggleCheck(grid.dataMgr.datalist[Util.random(10)]);
-			</textarea>
-
-			<textarea id="getList">
-				print(JSON.stringify(grid.checkMgr.getCheckList()));
-			</textarea>
-
-			<textarea id="check5">
-				grid.checkMgr.checkList(grid.dataMgr.datalist.slice(0,5));
-			</textarea>
-
-			<textarea id="radio">
-				if (grid !== undefined){grid.destroy();grid=undefined;}
-				data = [];
-				for (var i = 0; i < 20; i++)	data.push({id:i, name:"이름 " + i});
-
-				grid = JGM.grid({ container: document.getElementById("grid"), datalist: data, colDefs: [ {key:"id",name:"아이디"}, { key:"name", name:"이름"} ],
-				options: {
-				ColHeader:{},
-				CheckManager:{
-				isRadio: true	// checkbox 가 아닌 radio 버튼을 사용합니다. radio 버튼의 특징은 최대 한개의 로우만 선택할 수 있습니다.
-				},
-				MenuBar:{}
-				}});
-
-				grid.event.register({
-				e: "onAfterCheckChange",	// 한개의 데이터가 체크/체크해제 되었을 경우 발생하는 이벤트 입니다.
-				f: function(datarow, check) {	// 이벤트 핸들러에는 데이터와 체크 여부가 파라미터로 주어집니다.
-				print(JSON.stringify(datarow) + " 가 체크" + (check ? "":"해제") + " 되었습니다.");
-				}
-				});
-			</textarea>
-
-		</div>
-
-		<script>
-			run('resetcode');
+			});
 		</script>
-
 	</body>
 </html>
