--- a/demo/src_search_double_header.html
+++ b/demo/src_search_double_header.html
@@ -69,6 +69,7 @@
 				CheckManager:{},
 				type: 'int',
 				parser: true,
+				sumRenderer:true,
 				validator: function(v, d, s, n, e) {
 					return isFinite(v);
 				},
