check + filter -> disabled icon width

--- a/demo/src_search_double_header.html
+++ b/demo/src_search_double_header.html
@@ -95,6 +95,7 @@
 				datalist: data,
 				colDefs: colDefs,
 				options: {
+					width: 800,
 					name:'grid',
 					ViewportManager:{
 						rowsPerPage: 20,
