--- a/demo/src_search_double_header.html
+++ b/demo/src_search_double_header.html
@@ -97,7 +97,9 @@
 				options: {
 					width: 800,
 					name:'grid',
+					columnHideEnabled: true,
 					ViewportManager:{
+						evenOddRows: true,
 						rowsPerPage: 20,
 						autoHeight:false
 					},
@@ -110,8 +112,7 @@
 					SelectionManager:{
 					},
 					EditManager:{},
-					MenuBar:{},
-					DataCreator:{},
+					//DataCreator:{},
 					Footer:{},
 					CheckManager:{
 					}	// 체크 매니저를 기본 옵션으로 생성합니다.
