--- a/demo/src_search_many_columns.html
+++ b/demo/src_search_many_columns.html
@@ -89,7 +89,7 @@
 						rowsPerPage: 20,
 						autoHeight:false
 					},
-					DataManager:{idKey:'0'},
+					DataManager:{idColKeys:['id','name']},
 					ColHeader:{
 						reorderEnabled:true,
 						syncResize:false
